[gd_scene load_steps=6 format=3 uid="uid://dpjvvab7jj1vg"]

[ext_resource type="Script" uid="uid://sa2vl3peh0ln" path="res://Scripts/Craft_menu.gd" id="1_r0vih"]
[ext_resource type="Resource" uid="uid://c7opwoo1y8eg8" path="res://Resources/Crafts/CraftList.tres" id="2_aag6h"]
[ext_resource type="PackedScene" uid="uid://de65btnyy1lye" path="res://Scenes/slot.tscn" id="3_aag6h"]
[ext_resource type="PackedScene" uid="uid://443hsy30jycs" path="res://Scenes/Inventory.tscn" id="4_8ta7s"]
[ext_resource type="Resource" uid="uid://0im7somcwcp" path="res://Resources/Inventories/PlayerInv.tres" id="5_0qif1"]

[node name="CraftMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 254.0
offset_top = 94.0
offset_right = -218.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r0vih")
itemCraftList = ExtResource("2_aag6h")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 14
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelRecipes" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Recetas"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
allow_search = false
auto_width = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="LabelIngredients" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Ingredientes"
horizontal_alignment = 1

[node name="GridIngredients" type="GridContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="LabelResult" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Resultado"
horizontal_alignment = 1

[node name="Slot" parent="HBoxContainer/VBoxContainer2" instance=ExtResource("3_aag6h")]
layout_mode = 2

[node name="CraftButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Crear"

[node name="PlayerInventory" parent="HBoxContainer/VBoxContainer2" instance=ExtResource("4_8ta7s")]
layout_mode = 2
show = true
inventory = ExtResource("5_0qif1")

[node name="CloseButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = " X "

[connection signal="item_selected" from="HBoxContainer/VBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/CraftButton" to="." method="_on_craft_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
